added much functionality to header

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -12,18 +12,18 @@
 	<div id="wrapper">
         <div id="header">
             <div id="SiS-logo"><a href="http://www.scienceinsport.com"><img src="../img/ui/sis.png" alt="Science in Sport logo" title="SiS" height="78" width="163" /></a></div>
-            
+            <div id="main-menu"></div>
             
             <div id="mega-dropdown">
             	<ul class="ul-0">
-                	<li class="li-0"><a href="#" title="About">About</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="About">About</a></span>
                     	<ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
@@ -39,14 +39,31 @@
                     </li>
                 </ul>
                 <ul class="ul-0">
-                	<li class="li-0"><a href="#" title="Training &amp; Advice">Training &amp; Advice</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="Training &amp; Advice">Training &amp; Advice</a></span>
                    	 	<ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
+                                </ul>
+                                <ul class="ul-2">
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
+                                </ul>
+                                <ul class="ul-2">
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Our Quality Commitment">Our Quality Commitment</a>
+                                </ul>
+                                <ul class="ul-2">
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="International Distributors">International Distributors</a>
+                                </ul>
+                            </li>
+                            <li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
+                            	<ul class="ul-2">
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
+                                </ul>
+                                <ul class="ul-2">
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
@@ -62,14 +79,14 @@
                     </li>
                 </ul>
                 <ul class="ul-0">
-                	<li class="li-0"><a href="#" title="Sponsorship partners &amp; Partners">Sponsorship partners &amp; Partners</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="Sponsorship partners &amp; Partners">Sponsorship partners &amp; Partners</a></span>
                     	<ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
@@ -85,14 +102,14 @@
                     </li>
                 </ul>
                 <ul class="ul-0">
-                	<li class="li-0"><a href="#" title="News &amp; Events">News &amp; Events</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="News &amp; Events">News &amp; Events</a></span>
                     	<ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
@@ -108,14 +125,14 @@
                     </li>
                 </ul>
                 <ul class="ul-0">
-                	<li class="li-0"><a href="#" title="Videos">Videos</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="Videos">Videos</a></span>
                     <ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing</a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
@@ -131,14 +148,14 @@
                     </li>
                 </ul>
                 <ul class="ul-0">
-                	<li class="li-0"><a href="#" title="Shop">Shop</a>
+                	<li class="li-0"><span><a  class="top-level"href="#" title="Shop">Shop</a></span>
                     	<ul class="ul-1">
                         	<li class="li-1"><a href="#" title="About Science in sport">About Science in sport</a>
                             	<ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="">About Science in sport</a>
                                 </ul>
                                 <ul class="ul-2">
-                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing - Taking our Responsibility Seriously">Banned Substance Testing - Taking our Responsibility Seriously</a>
+                                	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="Banned Substance Testing">Banned Substance Testing </a>
                                 </ul>
                                 <ul class="ul-2">
                                 	<li class="li-2"><span>&bull;&nbsp;</span><a href="#" title="The Science in Sport Promise">The Science in Sport Promise</a>
