Except for cart image, header seems to be done

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -13,7 +13,14 @@
         <div id="header">
             <div id="SiS-logo"><a href="http://www.scienceinsport.com"><img src="../img/ui/sis.png" alt="Science in Sport logo" title="SiS" height="78" width="163" /></a></div>
             <div id="main-menu"></div>
-            
+            <div id="account-menu">
+            	<div class="acc-menu-item"><a href="#"><span>[2 Items]</span></a></div>
+            	<div class="acc-menu-item"><a href="#" style="color:#656565">Cart</a></div>
+            	<div class="acc-menu-item"><a href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
+            	<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
+            	<div class="acc-menu-item"><a href="#"><span>Help</span></a></div>
+            	<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>               
+            </div>
             <div id="mega-dropdown">
             	<ul class="ul-0">
                 	<li class="li-0"><span class="cat-title"><a  class="top-level"href="#" title="About">About</a></span>
