added some footer elements

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -21,6 +21,7 @@
 					/* hide the mega dropdown for non-js users */
 					#mega-dropdown{display:none}
 				</style>
+                <!-- spans below are copies of those found in .li-0 -->
             	<span class="cat-title"><a  class="top-level"href="#" title="About">About</a></span>
                 <span class="cat-title"><a class="top-level" href="#" title="Training &amp; Advice">Training &amp; Advice</a></span>
                 <span class="cat-title"><a  class="top-level"href="#" title="Sponsorship &amp; Partners">Sponsorship &amp; Partners</a></span>
@@ -38,6 +39,7 @@
             	<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>               
             </div>
             <div id="mega-dropdown">
+            	<!-- example menu -->
             	<ul class="ul-0">
                 	<li class="li-0"><span class="cat-title"><a  class="top-level"href="#" title="About">About</a></span>
                     	<ul class="ul-1">
@@ -421,7 +423,42 @@
         </div><!-- #content -->
         
         <div id="footer">
-            <div id="footer-nav">&nbsp;</div>
+            <div id="footer-nav">
+            	<div id="footer-columns">
+                    <div class="footer-column">
+                        <p>About Science in Sport</p>
+                        <p>
+                      <ul>
+                                <li><a href="#" title="Contact Us">Contact Us</a></li>
+                                <li><a href="#" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
+                                <li><a href="#" title="Cookies and Privacy Policy">Cookies and Privacy Policy</a></li>
+                                <li><a href="#" title="Affiliate Programme">Affiliate Programme</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="footer-column">
+                        <p>Customer Service</p>
+                        <p>
+                      <ul>
+                          <li><a href="#" title="Contact Us">Contact Us</a></li>
+                                <li><a href="#" title="FAQs">FAQs</a></li>
+                                <li><a href="#" title="Delivery &amp; Returns">Delivery &amp; Returns</a></li>
+                             
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="footer-column">
+                        <p>Product Range</p>
+                        <p>
+                      <ul>
+                                <li><a href="#" title="SiS Go Range">SiS Go Range</a></li>
+                                <li><a href="#" title="SiS Rego range">SiS Rego range</a></li>
+                                <li><a href="#" title="Delivery and Returns">Delivery and Returns</a></li>
+                            </ul>
+                        </p>
+                    </div>
+            	</div>
+            </div>
             <div id="footer-legal">&nbsp;</div>
         </div><!-- #footer -->
    	</div><!--  #wrapper -->
