added submit form to footer

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -33,7 +33,7 @@
             <div id="account-menu">
             	<div class="acc-menu-item"><a href="#"><span>[2 Items]</span></a></div>
             	<div class="acc-menu-item"><a href="#" style="color:#656565">Cart</a></div>
-            	<div class="acc-menu-item"><a href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
+            	<div class="acc-menu-item"><a href="#"><img src="./img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Help</span></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>               
@@ -414,7 +414,8 @@
             </div>
             <div id="search-box">
             	<!-- uses html5 search field - might need to add js alternative too -->
-            	<input name="search" type="search" value="ENTER KEYWORD OR PRODUCT CODE" size="30" maxlength="50">
+            	<input name="search" type="search" value="ENTER KEYWORD OR PRODUCT CODE"  maxlength="50">
+                
             </div>
         </div><!-- #header -->
         
@@ -428,7 +429,7 @@
                     <div class="footer-column">
                         <p>About Science in Sport</p>
                         <p>
-                      <ul>
+                      		<ul>
                                 <li><a href="#" title="Contact Us">Contact Us</a></li>
                                 <li><a href="#" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
                                 <li><a href="#" title="Cookies and Privacy Policy">Cookies and Privacy Policy</a></li>
@@ -450,16 +451,34 @@
                     <div class="footer-column">
                         <p>Product Range</p>
                         <p>
-                      <ul>
+                      		<ul>
                                 <li><a href="#" title="SiS Go Range">SiS Go Range</a></li>
                                 <li><a href="#" title="SiS Rego range">SiS Rego range</a></li>
                                 <li><a href="#" title="Delivery and Returns">Delivery and Returns</a></li>
                             </ul>
                         </p>
                     </div>
+                    <div id="last-footer-column">
+                    	<div id="sign-up-copy">
+                            <span class="sign-up">Sign up for</span><br />
+                            <span class="news-offers">News, Offers and More</span>
+                        </div>
+                        <div id="footer-email">
+                        <form action="#" method="post" name="newsletter" target="_self">
+                        	<input name="customerEmail" type="text" value="E-mail address"  maxlength="128">
+                            <input name="sign-up" type="submit" value="Sign-Up">
+                        </form>
+                        </div>
+                    </div>
             	</div>
             </div>
-            <div id="footer-legal">&nbsp;</div>
+            <div id="footer-legal"><span>&copy; SiS (Science in Sport) Limited, The Innovation Centre, 35 Churchill Way, Lancashire, BB9 6RT. Company reg number: 2742833, VAT reg number: GB 604598037</span></div>
+            <div id="footer-follow">
+                <h2>Follow Us: </h2>
+                <a target="blank" href="https://twitter.com/ScienceinSport" class="social-icon twitter"></a>
+                <a target="blank" href="https://www.facebook.com/ScienceInSportOfficial" class="social-icon facebook"></a>
+                <a target="blank" href="http://www.youtube.com/user/scienceinsport/" class="social-icon youtube"></a>
+            </div>
         </div><!-- #footer -->
    	</div><!--  #wrapper -->
 </div><!-- #container -->
