header and footer ready to test

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -33,7 +33,7 @@
             <div id="account-menu">
             	<div class="acc-menu-item"><a href="#"><span>[2 Items]</span></a></div>
             	<div class="acc-menu-item"><a href="#" style="color:#656565">Cart</a></div>
-            	<div class="acc-menu-item"><a href="#"><img src="./img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
+            	<div class="acc-menu-item"><a href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Help</span></a></div>
             	<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>               
@@ -464,11 +464,18 @@
                             <span class="news-offers">News, Offers and More</span>
                         </div>
                         <div id="footer-email">
-                        <form action="#" method="post" name="newsletter" target="_self">
-                        	<input name="customerEmail" type="text" value="E-mail address"  maxlength="128">
-                            <input name="sign-up" type="submit" value="Sign-Up">
-                        </form>
+                            <form action="#" method="post" name="newsletter" target="_self">
+                                <input name="customerEmail" type="text" value="E-mail address"  maxlength="128">
+                                <input name="sign-up" type="submit" value="Sign-Up">
+                            </form>
+                            <div id="contact-info">
+                                <span class="white call-us">Call us on:</span><span class="telephone">+44(0) 1282 440 980</span><br />
+                                <span class="opening-hours">8:00am to 5:00pm, Mon to Fri </span>
+                            </div>
+                            <div id="i-s-logo"><a href="http://www.informed-sport.com/" target="_blank"><img src="../img/ui/informed-sport.png" alt="Informed Sport" title="Informed Sport" height="44" width="87" /></a></div>
                         </div>
+                        <div style="clear:both"></div>
+                        
                     </div>
             	</div>
             </div>
