--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Parent template containing header and footer, linked files etc.</title>
 <link rel="stylesheet" type="text/css" href="../css/main.css" media="screen" />
+<!--[if IE 7]>
+	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
+<![endif]-->
 
 </head>
 
