Mini basket component looking quite reasonable

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -421,6 +421,7 @@
             	<input name="search" type="text" value="ENTER KEYWORD OR PRODUCT CODE"  maxlength="50">
                 
             </div>
+            <div id="ajax-menu-container"></div>
         </div><!-- #header -->
         
         <div id="content">
