added product listing template which includes product box A

--- a/src/category-listing-template.html
+++ b/src/category-listing-template.html
@@ -1,9 +1,9 @@
 
 <!-- category listing content -->
-<div id="breadcrumb">
+<div id="breadcrumb" class="grey">
 	<div>
     	<a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; 
-        <a href="#" title="Sponsorshop &amp; Partners"><span class="this-level dark-gray">Sponsorshop &amp; Partners</span></a>
+        <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">Sponsorship &amp; Partners</span></a>
    </div>
 </div>
 <div id="cat-listing-wrapper">
@@ -16,7 +16,7 @@
         </h1>
         <p class="h1-sub-heading grey">SiS category subheading</p>
     </div>
-    <div id="grey-bg-wrapper">
+    <div id="category-grey-bg-wrapper">
       <div id="category-wysiwyg">
         	<h2 class="near-black">Sponsorship &amp; partners</h2>
           <p>Science in Sport has a unique heritage in working with the world’s top athletes and teams. It is these relationships that enable us to
