tested search template added moz and ie fixes

--- a/src/search-results-template.html
+++ b/src/search-results-template.html
@@ -17,7 +17,7 @@
 					<div class="results-header">
 						<form method="post" class="results-code-box" action="#">
 							<input type="text" id="results-code" size="30" class="results-input" />
-							<button class="yellow-button">Search</button>
+							<button class="yellow-btn">Search</button>
 						</form>
 					</div>
 					<h2 class="near-black">Product Matches</h2>
