added product template

--- a/src/product-template.html
+++ b/src/product-template.html
@@ -26,7 +26,7 @@ body {
 	<div id="product-container">
 		<div id="add-this-component"> 
 			<!-- AddThis Button BEGIN --> 
-			<!--<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
                 <a class="addthis_button_facebook"></a>
                 <a class="addthis_button_twitter"></a>
                 <a class="addthis_button_email"></a>
@@ -34,7 +34,7 @@ body {
                 <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
                 </div>
                 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script>--> 
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script>
 			<!-- AddThis Button END --> 
 		</div>
 		<div class="clear"></div>
@@ -92,25 +92,75 @@ body {
 			</form>
 			<div id="product-ad-zone"> <a href="#" title="Ad zone"><img src="../img/dummy/header-advert-zone.jpg" alt="ad zone" width="445" height="109" /></a> </div>
 		</div>
-		
+		<div class="clear"></div>
 		<!-- tabs -->
 		<div id="tab-container" class="tab-container">
 			<ul class='etabs'>
-				<li class='tab'><a href="#tabs1-html">HTML Markup</a></li>
-				<li class='tab'><a href="#tabs1-js">Required JS</a></li>
-				<li class='tab'><a href="#tabs1-css">Example CSS</a></li>
+				<li class='tab'><a href="#prod-tab-1">Product details</a></li>
+				<li class='tab'><a href="#prod-tab-2">Nutritional info</a></li>
+				<li class='tab'><a href="#prod-tab-3">Usage</a></li>
+				<li class='tab'><a href="#prod-tab-4">Q &amp A</a></li>
+				<li class='tab'><a href="#prod-tab-5">Video</a></li>
 			</ul>
-			<div id="tabs1-html">
-				<h2>HTML Markup for these tabs</h2>
+			<div id="prod-tab-1" class="tabbed-content">
+				<h2>Performance recovery</h2>
+				<p>Product details Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu nunc sit amet elit sollicitudin mollis sit amet vel massa. In mattis lobortis magna, non semper sem ornare et. Ut rhoncus nibh eget mauris molestie sit amet consequat magna dictum.</p><p>Donec a metus non ipsum suscipit mattis. Maecenas mattis volutpat ante dictum mcorper. Vestibulum nec diam ac arcu imperdi tincidunt. Nunc malesuada facilisis nunc iaculis iaculis. </p><p>In semper congue egestas. Maecenas mattis volutpat ante dictum ullamcorper dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. Proin eget tempus massa. Non ipsum suscipit mattis aecenas mattis volutpat ante dictum mcorper. Vestibulum nec diam ac arcu imperdi tincidunt. Nunc malesuada facilisis nunc iaculis iaculis.</p>
+			</div>
+			<div id="prod-tab-2" class="tabbed-content">
+				<h2>Nutritional info</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu nunc sit amet elit sollicitudinmollis sit amet vel massa. In mattis lobortis magna, non semper sem ornare et. Ut rhoncus nibh eget mauris molestie sit amet consequat magna dictum. Donec a metus non ipsum suscipit mattis.</p>
+				<ul>
+					<li>What you see is what you get text areas</li>
+					<li>Lorem ipsum dolor sit amett</li>
+					<li>In hac habitasse platea dictumst</li>
+					<li>Guaranteed to make you go faster</li>
+				</ul>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu nunc sit amet elit sollicitudinmollis sit amet vel massa. In  Ut rhoncus nibh eget mauris molestie sit amet consequat magna dictum. Donec a metus non ipsum suscipit mattis.</p>
+				<p>Maecenas mattis volutpat ante dictum mcorper. Vestibulum nec diam ac arcu imperdi tincidunt. Nunc malesuada facilisis nunc iaculis iaculis. In semper congue egestas. Maecenas mattis volutpat ante dictum ullamcorper dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst.
+Proin eget tempus massa.</p>
+			</div>
+			<div id="prod-tab-3" class="tabbed-content">
+				<h2>Usage</h2>
+				<p>Product details Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu nunc sit amet elit sollicitudin mollis sit amet vel massa. In mattis lobortis magna, non semper sem ornare et. Ut rhoncus nibh eget mauris molestie sit amet consequat magna dictum.</p><p>Donec a metus non ipsum suscipit mattis. Maecenas mattis volutpat ante dictum mcorper. Vestibulum nec diam ac arcu imperdi tincidunt. Nunc malesuada facilisis nunc iaculis iaculis. </p><p>In semper congue egestas. Maecenas mattis volutpat ante dictum ullamcorper dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. Proin eget tempus massa. Non ipsum suscipit mattis aecenas mattis volutpat ante dictum mcorper. Vestibulum nec diam ac arcu imperdi tincidunt. Nunc malesuada facilisis nunc iaculis iaculis.</p>
 				<!-- content --> 
 			</div>
-			<div id="tabs1-js">
-				<h2>JS for these tabs</h2>
-				<!-- content --> 
+			<div id="prod-tab-4" class="tabbed-content">
+				<h2>Questions and Answers</h2>
+				<div id="q-a-content">
+					<div id="q-a">
+						<h3>Are SiS GO Isotonic gels designed to replace isotonic drinks?</h3>
+						<p>They were originally designed to make it easy for an athlete to take an energy boost without the need for bulky energy drinks or to co administer with water as was the case with the older generation of energy gels. There are situations where you would just use just a gel, there are situations where they would be complementary to electrolyte drinks as part of a flexible nutrition strategy.</p>
+		
+						<h3>Can SiS REGO Night be used with skimmed milk rather than water? </h3>
+						<p>You can mix it with milk if you wish. You will be adding more calories, which may or may not be useful to you and you will also be adding calcium, which
+		may reduce absorption of the zinc and magnesium. You could just try making it with less water or adding less full fat milk to get the same mouth feel.</p>
+					</div>
+					<div id="q-a-form-content">
+						<h3>Submit a question</h3>
+						<p class="grey">*Required fields are marked with an asterisk</p>
+						<form id="question-submission-form" action="#" method="post" name="submit-a-question" target="_self">
+						<p class="error"> Please enter a first name</p>
+						<label for="question-firstname">First Name*</label>
+						<input id="question-firstname" type="text" name="q-a-first-name" size="50">
+						<p class="error"> Please enter a last name</p>
+						<label for="question-lastname">Last Name*</label>
+						<input id="question-lastname" type="text" name="q-a-last-name" size="50">
+						<p class="error">Please enter a valid email address</p>
+						<label for="question-email-address">Email Address*</label>
+						<input id="question-email-address" type="text"  name="q-a-email-address" size="50" maxlength="128">
+						<p class="error">Please enter your question</p>
+						<label for="question-question">Your question*</label>
+						<textarea cols="50" rows="5" spellcheck="true" id="question-question"></textarea>
+						<button class="yellow-btn">Submit</button>
+						</form>
+					</div>
+					<div class="clear"></div>
+				</div>
 			</div>
-			<div id="tabs1-css">
-				<h2>CSS Styles for these tabs</h2>
-				<!-- content --> 
+			
+			<div id="prod-tab-5" class="tabbed-content">
+				<h2>Video</h2>
+				<iframe width="934" height="525" src="//www.youtube.com/embed/UMAhcxYRVZA" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<!--end tabs --> 
