--- a/src/product-template.html
+++ b/src/product-template.html
@@ -1,19 +1,6 @@
-<link rel="stylesheet" type="text/css" href="../css/main.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="../css/checkout-working.css" media="screen" />
-<!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
-<![endif]-->
-<script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script src="../js/jQueryPlugins.js" type="text/javascript"></script>
-<script src="../js/main.js" type="text/javascript"></script>
-<style>
-body {
-	width: 1024px;
-	margin: 0
-}
-</style>
-
 <!-- product listing content -->
+<script src="../js/jQueryPlugins.js" type="text/javascript"></script>
+<script type="text/javascript">jQuery('#tab-container').easytabs();</script>
 <div id="breadcrumb" class="grey">
 	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Range</a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Rapid Recovery Range </a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">SiS Rapid Recovery 1.6kg</span></a> </div>
 </div>
@@ -22,7 +9,7 @@ body {
 	<h1 class="near-black"> SiS Online Store </h1>
 	<p class="h1-sub-heading grey">Free Delivery on all UK orders.</p>
 </div>
-<div id="category-grey-bg-wrapper">
+<div id="category-grey-bg-wrapper" style="padding-bottom:0px">
 	<div id="product-container">
 		<div id="add-this-component"> 
 			<!-- AddThis Button BEGIN --> 
@@ -31,7 +18,7 @@ body {
                 <a class="addthis_button_twitter"></a>
                 <a class="addthis_button_email"></a>
                 <a class="addthis_button_print"></a>
-                <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+                <a class="addthis_button_compact"></a>
                 </div>
                 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
                 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script>
@@ -217,3 +204,4 @@ Proin eget tempus massa.</p>
 		<div><img src="../img/dummy/payment-logos.png" alt="Card logos" /></div>
 	</div>
 </div>
+
