some small fixes and made header xhtml compliant

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -22,12 +22,8 @@
             <div id="main-menu">
             <!-- top menu items are loaded here with javascript -->
             
-            <noscript>
-            	<!--show top level menu items for users without Javascript emabled -->
-            	<style type="text/css">
-					/* hide the mega dropdown for non-js users */
-					#mega-dropdown{display:none}
-				</style>
+			<!--show top level menu items for users without Javascript emabled -->
+            <div id="css-menu">
                 <!-- spans below are copies of those found in .li-0 -->
             	<span class="cat-title"><a  class="top-level"href="#" title="About">About</a></span>
                 <span class="cat-title"><a class="top-level" href="#" title="Training &amp; Advice">Training &amp; Advice</a></span>
@@ -35,7 +31,7 @@
                 <span class="cat-title"><a  class="top-level"href="#" title="News &amp; Events">News &amp; Events</a></span>
                 <span class="cat-title"><a  class="top-level"href="#" title="Videos">Videos</a></span>
                 <span class="cat-title"><a  class="top-level"href="#" title="Shop">Shop</a></span>
-            </noscript>
+            </div>
             </div>
             <div id="account-menu">
             	<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
