added content template

--- a/src/product-template.html
+++ b/src/product-template.html
@@ -2,7 +2,7 @@
 <script src="../js/jQueryPlugins.js" type="text/javascript"></script>
 <script type="text/javascript">jQuery('#tab-container').easytabs();</script>
 <div id="breadcrumb" class="grey">
-	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Range</a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Rapid Recovery Range </a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">SiS Rapid Recovery 1.6kg</span></a> </div>
+	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Range</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Rapid Recovery Range</span> </a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">SiS Rapid Recovery 1.6kg</span></a> </div>
 </div>
 <div id="ad-title-space">
 	<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
