--- a/src/content-template.html
+++ b/src/content-template.html
@@ -11,7 +11,7 @@
 	<div id="content-container">
 		<div id="add-this-component"> 
 			<!-- AddThis Button BEGIN --> 
-			<!--<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
                 <a class="addthis_button_facebook"></a>
                 <a class="addthis_button_twitter"></a>
                 <a class="addthis_button_email"></a>
@@ -19,7 +19,7 @@
                 <a class="addthis_button_compact"></a>
                 </div>
                 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script>--> 
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script>
 			<!-- AddThis Button END --> 
 		</div>
 		<div class="clear"></div>
