added contact us template

--- a/src/product-template.html
+++ b/src/product-template.html
@@ -138,7 +138,8 @@ Proin eget tempus massa.</p>
 						<p class="error">Please enter your question</p>
 						<label for="question-question">Your question*</label>
 						<textarea cols="50" rows="5" spellcheck="true" id="question-question"></textarea>
-						<button class="yellow-btn">Submit</button>
+						<label for="submit-question"></label>
+						<button id="submit-question" class="yellow-btn">Submit</button>
 						</form>
 					</div>
 					<div class="clear"></div>
