--- a/src/video-listing-template.html
+++ b/src/video-listing-template.html
@@ -1,74 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Parent template containing header and footer, linked files etc.</title>
-<link rel="stylesheet" type="text/css" href="../css/main.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="../css/checkout-working.css" media="screen" />
-<!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
-<![endif]-->
-<script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script src="../js/main.js" type="text/javascript"></script>
-</head>
-
-<body>
-<style>
-	body{
-		width:1024px;
-	}
-</style>
-
-
-
 
 <div id="breadcrumb" class="grey">
-	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">Sponsorship &amp; Partners</span></a> </div>
+	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="Videos"><span class="this-level dark-gray">Videos</span></a> </div>
 </div>
-<div id="cat-listing-wrapper">
+<div id="video-listing-wrapper">
 	<div id="ad-title-space">
 		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
-		<h1 class="near-black"> Sponsorship &amp; partners </h1>
-		<p class="h1-sub-heading grey">SiS category subheading</p>
+		<h1 class="near-black">SiS Videos</h1>
+		<p class="h1-sub-heading grey">SiS video subheading</p>
 	</div>
-	<div id="category-grey-bg-wrapper">
-		<div id="category-wysiwyg">
-			<h2 class="near-black">Sponsorship &amp; partners</h2>
+	<div id="video-grey-bg-wrapper">
+		<div id="video-wysiwyg">
+			<h2 class="near-black">Video intro wysiwyg</h2>
 			<p>Science in Sport has a unique heritage in working with the world’s top athletes and teams. It is these relationships that enable us to
 				constantly learn and understand what it takes to achieve the ultimate performance out of the world’s very best sportsmen and women.
 				This understanding is applied to every single product in the SiS range, therefore no matter what level you perform at you can be confident
 				you are using product fit for a pro.</p>
 			<p>We work with an unprecedented number of pro cycling teams, making us the most used sports nutrition brand at this years Tour De France and Tour of Britain. </p>
 		</div>
-		<div id="category-list"> 
+		<div id="video-list"> 
 			<!-- loop through categories -->
-			<div class="category-item"> <a href="#" title="Category item"><img src="../img/dummy/cat-img-1.jpg" height="170" width="304" alt="category item" /></a>
-				<h3 class="category-title"><a href="#" title="Category title" class="near-black">Sir Chris Hoy</a></h3>
-				<div class="category-blurb">
-					<p>Sir Chris Hoy is a six-time Olympic track cycling gold medalist and Britain’s most successful Olympian.</p>
+			<div class="video-item" onclick="javascript:ytoverlay(0);"><img src="../img/dummy/video-1.jpg" height="170" width="304" alt="video item" />
+				<h3 class="video-title">GB Rowing Team</h3>
+				<h4>Training day on Caversham Lake.</h4>
+				<h5>//www.youtube.com/embed/jrg59o814dg</h5>
+				<div class="video-blurb">
+					<p>Witness a days training with the GB Olympic and ParaOlympic Rowing teams at their Caversham Lake...</p>
 				</div>
 			</div>
-			<div class="category-item"> <a href="#" title="Category item"><img src="../img/dummy/cat-img-2.jpg" height="170" width="304" alt="category item" /></a>
-				<h3 class="category-title"><a href="#" title="Category title" class="near-black">Helen Jenkins</a></h3>
-				<div class="category-blurb">
+			<div class="video-item" onclick="javascript:ytoverlay(1);"><img src="../img/dummy/video-2.jpg" height="170" width="304" alt="video item" />
+				<h3 class="video-title">Helen Jenkins</h3>
+				<h4>Short film with a Triathlete World Champ.</h4>
+				<h5>//www.youtube.com/embed/jrg59o814dg</h5>
+				<div class="video-blurb">
 					<p>Helen Jenkins is Great Britain’s leading female triathlete who has twice been an ITU World Champion.</p>
 				</div>
 			</div>
-			<div class="category-item"> <a href="#" title="Category item"><img src="../img/dummy/cat-img-3.jpg" height="170" width="304" alt="category item" /></a>
-				<h3 class="category-title"><a href="#" title="Category title" class="near-black">Belkin ProCycling</a></h3>
-				<div class="category-blurb">
+			<div class="video-item" onclick="javascript:ytoverlay(2);"><img src="../img/dummy/video-3.jpg" height="170" width="304" alt="video item" />
+				<h3 class="video-title">Sir Chris Hoy</h3>
+				<h4>Short film with X6 Olympiad Sir Chris Hoy.</h4>
+				<h5>//www.youtube.com/embed/jrg59o814dg</h5>
+				<div class="video-blurb">
 					<p>Previously known as the Blanco Cycling Team, the newly formed Belkin Pro Cycling Team will again be fuelled by SiS during 2013. </p>
 				</div>
 			</div>
-			<div class="category-item"> <a href="#" title="Category item"><img src="../img/dummy/cat-img-4.jpg" height="170" width="304" alt="category item" /></a>
-				<h3 class="category-title"><a href="#" title="Category title" class="near-black">Rapha Condor JLT</a></h3>
-				<div class="category-blurb">
+			<div class="video-item" onclick="javascript:ytoverlay(3);"><img src="../img/dummy/video-4.jpg" height="170" width="304" alt="video item" />
+				<h3 class="video-title">Michael Hutchinson</h3>
+				<h4>Training for time trials.</h4>
+				<h5>//www.youtube.com/embed/jrg59o814dg</h5>
+				<div class="video-blurb">
 					<p>SiS is the exclusive sports nutritional supplier to Rapha Condor JLT in 2013, a leading British UCI Continental professional cycling team racing in events both in the UK and Europe. </p>
 				</div>
 			</div>
-			<div class="category-item"> <a href="#" title="Category item"><img src="../img/dummy/cat-img-5.jpg" height="170" width="304" alt="category item" /></a>
-				<h3 class="category-title"><a href="#" title="Category title" class="near-black">Katusha</a></h3>
-				<div class="category-blurb">
+			<div class="video-item" onclick="javascript:ytoverlay(4);"><img src="../img/dummy/video-5.jpg" height="170" width="304" alt="video item" />
+				<h3 class="video-title">GB Rowing Team</h3>
+				<h4>Nutrition Rituals</h4>
+				<h5>//www.youtube.com/embed/jrg59o814dg</h5>
+				<div class="video-blurb">
 					<p>This Russian Super-Team represents the Russian Global Cycling Project and will be fuelled by SiS in 2013. </p>
 				</div>
 			</div>
@@ -99,14 +86,16 @@
 		</div>
 	</div>
 	<!-- /section --> 
-	
+
 </div>
-
-
-
-
-
-
-
-</body>
-</html>
+<div id="yt-overlay">
+	<div id="yt-outer-frame">
+		<div id="yt-inner-frame">
+			<div class="yt-xclose"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
+			<div class="clear"></div>
+			<h2></h2>
+			<h3></h3>
+			<iframe width="822" height="462" src="" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+</div>
